--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -11,6 +11,12 @@ perspective effects (not including the modals and the overlay).
 
 .modal {
 	z-index: 100000;
+	background: rgba(0, 0, 0, .7);
+
+	.modal-dialog {
+		overflow-y: scroll;
+    	margin-top: 4rem;
+	}
 }
 
 // Modal Button
